@@ -4,7 +4,7 @@ Plugin Name: NextGEN Gallery
 Plugin URI: http://alexrabe.boelinger.com/?page_id=80
 Description: A NextGENeration Photo gallery for the Web 2.0.
 Author: Alex Rabe
-Version: 1.2.0RC1
+Version: 1.2.0RC2
 
 Author URI: http://alexrabe.boelinger.com/
 
@@ -44,7 +44,7 @@ if(preg_match('#' . basename(__FILE__) . '#', $_SERVER['PHP_SELF'])) { die('You 
 if (!class_exists('nggLoader')) {
 class nggLoader {
 	
-	var $version     = '1.2.0RC1';
+	var $version     = '1.2.0RC2';
 	var $dbversion   = '1.1.0';
 	var $minium_WP   = '2.7';
 	var $minium_WPMU = '2.7';
@@ -316,12 +316,10 @@ class nggLoader {
 	
 	// Add rewrite rules
 	function start_rewrite_module() {
-	
-	global $nggRewrite;	
-		
-	if ( class_exists(nggRewrite) )
-		$nggRewrite = new nggRewrite();	
-					
+		global $nggRewrite;	
+			
+		if ( class_exists(nggRewrite) )
+			$nggRewrite = new nggRewrite();	
 	}
 		
 	function activate() {
