@@ -8,12 +8,14 @@ V1.2.0
 - NEW : Support for i18n with polyglot or qtrans plugin (THX to Boris Glumpler)
 - NEW : Canonical meta link support
 - Added : SWFUpload V2.2.0 B5
+- Added : New memory limit check in upload screen
 - Bugfix : Language typo fixes
 - Bugfix : Admin Pagination fix
 - Bugfix : Typo fix in widgets
 - Bugfix : Init column script after document is ready
-- Bugfix : More Htmlentities() for links in the a href title description
+- Bugfix : htmlspecialchars() instead htmlentities() for links in the a href title description
 - Bugfix : Upgrade routine didn't add sortorder to correct table (THX to Uwe)
+- Bugfix : Correct shotcode in media upload tab
 
 V1.1.0 - 26.01.2009
 - NEW : Pagination for album page via custom fields ('ngg_paged_Galleries')
